hphp/test/zend/good/ext/pcntl/tests/pcntl_wait.php.skipif
<?php if (!extension_loaded("pcntl")) print "skip"; ?>
<?php if (!extension_loaded("posix")) die("skip posix extension not available"); ?>