hphp/test/zend/bad/ext/mbstring/tests/mb_ereg4.php.skipif
<?php
if (!extension_loaded('mbstring')) die('skip mbstring not enabled');
if (!function_exists("mb_ereg")) print "skip mb_ereg() not available";
?>